@@ -3,6 +3,8 @@
 Feeds 6.x 1.0 XXXXXXXXXXXXXXXXXXXX
 ----------------------------------
 
+- #623444 mongolito404, pvhee, pdrake, servantleader, alex_b et. al.: Mapper for
+  link module.
 - #652180 ronald_istos, rjbrown99, et. al.: Assign author of imported nodes.
 - #783098 elliotttf: Introduce hook_feeds_user_processor_targets_alter(), mapper
   for user profile fields.
